<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/user_register_head"/>

    <EditText
        android:id="@+id/user_register_etusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/user_register_etusername_hint"
        android:singleLine="true"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/user_register_etpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:hint="@string/user_register_etpassword_hint"
        android:inputType="textPassword"
        android:singleLine="true" />

    <Button
        android:id="@+id/user_register_btnenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/user_register_btnenter"/>

</LinearLayout>