<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#9c5d5d5d"
    android:layout_marginTop="3dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:paddingLeft="10dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_record_item_title"/>

        <TextView
            android:id="@+id/daily_record_item_timedescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/daily_record_item_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily_record_item_test"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <TextView
        android:id="@+id/daily_record_item_delete"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:visibility="invisible"
        android:background="#9caaaaaa"
        android:text="@string/daily_record_item_delete"
        android:layout_gravity="center"/>

</LinearLayout>